fix spacing below text
fix spacing below text using margin

--- a/filter/css/_filter.scss
+++ b/filter/css/_filter.scss
@@ -37,6 +37,7 @@
 			background-color: rgba(255,255,255,1);
 			border-radius: 1rem;
 			display: block;
+			padding-bottom: 1rem;
 
 			&:hover, :focus, :active, .selected {
 				color: rgba(255,255,255,1);
